First attempt Rails Girls post

--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -4,7 +4,7 @@ title: Travel
 description: "Leaving on a jet plane to D.C."
 modified: 2014-04-01
 category: code
-tags: [code]
+tags: [travel]
 comments: true
 <!-- image:
   feature: texture-feature-05.jpg
@@ -16,26 +16,54 @@ comments: true
 
 ### Landed at Living Social for the Rails Girls D.C. installation party!
 
-Lorem ipsum dolor sit amet, test link adipiscing elit. **Nullam** dignissim convallis est. Quisque aliquam.
+It's easy to forget your place of birth is a privilege. 
 
-![Smithsonian Image]({{ site.url }}/images/3953273590_704e3899d5_m.jpg)
-{: .image-pull-right}
+It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked through customs, in fact through U.S. citizens' processing, with my Canadian birth and citizenship. No one else on my plane was redirected. 
 
-Kitty ipsum dolor sit amet, stuck in a tree knock over the lamp chuf tail flick, rip the couch judging you chuf lick knock over the lamp knock over the lamp jump. Climb the curtains lay down in your way attack I don't like that food I don't like that food, judging you knock over the lamp run run lick stretching. Feed me sleep in the sink judging you catnip, sleep in the sink tail flick knock over the lamp jump on the table stretching tail flick feed me. Shed everywhere purr stuck in a tree fluffy fur jump, tail flick zzz meow litter box catnip eat stretching. Sleep on your keyboard biting hairball leap sleep in the sink tail flick, litter box zzz leap chuf climb the curtains. Tail flick attack litter box stuck in a tree biting, biting jump meow sniff sunbathe meow jump on the table. Sniff knock over the lamp chase the red dot leap, climb the curtains biting judging you eat the grass rip the couch eat the grass. Lick sunbathe run meow eat, jump I don't like that food biting chuf sniff.
-<br />
-<blockquote> Strive not to be a success, but rather to be of value. –Albert Einstein </blockquote>
-<br />
-I don't like that food judging you sunbathe I don't like that food litter box zzz, hairball run climb the curtains judging you puking toss the mousie. Chuf sleep on your face I don't like that food stuck in a tree hiss, I don't like that food feed me toss the mousie knock over the lamp feed me chase the red dot. Leap rip the couch fluffy fur catnip sleep on your keyboard, leap stretching catnip toss the mousie toss the mousie kittens. Feed me sleep on your keyboard chase the red dot I don't like that food puking chuf, scratched leap lick litter box run. Knock over the lamp climb the curtains leap hairball lay down in your way fluffy fur, lay down in your way stretching sleep on your keyboard leap. Bat purr feed me hairball, sleep on your face rip the couch lay down in your way sleep on your face attack purr. Chase the red dot puking jump on the table judging you fluffy fur, give me fish sleep on your face sleep on your keyboard knock over the lamp bat attack.
-<br />
+Today I have been redirected by a NASA scientist, a roving governor, FedEx and a skateboarder. All in a day, right?
 
-{% highlight css %}
-#container {
-  float: left;
-  margin: 0 -240px 0 0;
-  width: 100%;
-}
-{% endhighlight %}
+<hr />
+I remember my Rails installation.
 
-term
-: definition 1
-: definition 2
+The day was hot and sticky. Although I'd been told rules had changed since we were interviewed and we couldn't keep equipment on-site, I was told the Coordinator of the program had a laptop for me and it would be no problem to use.
+
+We tried to boot the computer up. It crashed. We tried to boot the computer up again. It crashed again. We tried to boot the computer up again. We got Ubuntu running, then it overheated, crashed, and wouldn't turn on again. Everyone else seemed to be doing something. The Coordinator said, "Oh well. Do you have another computer?" A tight little knot balled up inside me.
+
+It was finally decided I should go back "home" and get my iMac. I had just walked 20 minutes across Ottawa, but the Coordinator snidely remarked, "Well, you would've had to bring it anyway, right?"
+
+I started crying. I started walking. 
+
+I walked 20 minutes home, then dragged my 31.2 lb. iMac across downtown Ottawa from UOttawa campus. It's a walk that, given highway off-ramps and the lay of the streets, forces you directly into crossing a halfway house, youth hostel and full-on homeless shelter, into an extraordinarily sketchy parking lot. It was still littered with all the bottles and syringes from a Canada Day DJ party.I managed to get my $1200 most prized possession from home into the safety of where we were working from.
+
+From then on, installation was a breeze. One of our awesome instructors had designed a VM just for us, which had all the things we needed in it. My iMac powered through the installation no problem.
+
+Still, this is how I lost my Rails virginity.
+
+It wasn't pleasant. I wouldn't wish it on anyone.
+
+<hr />
+
+This is why I am such a firm believer in the Rails Girls model.
+
+I'll post with more about the model tomorrow, [here], but the basic premise is: programming is fun. Learning to program should be free. Everyone can program.
+
+The Rails Girls D.C. Installation Party in D.C. was wonderful. We were welcomed into a bright blue door, into the beautiful, tiered open concept Living Social office, down stairs into a warm and comfy exposed brick living room, then down the hall into the main meeting room.
+
+<blockquote> Programming is fun. Learning to program should be free. Everyone can program.</blockquote>
+
+There were sandwiches and drinks and 2 or more Coaches available at each table of 2-3 women participants. 
+
+I had the great honour and privilege to be a Coach tonight and I'm so excited for tomorrow. 
+
+There was a defined agenda, short lightning talks, lots of time to socialize and a completely laid back but organized approach to installing. Coaches were equipped with participants' skill levels and operating systems days before and select Coaches were paired with Windows participants.
+
+No one got left behind. No one was left out. Everyone was welcome. Everyone got installed and got to go home well-fed and had the opportunity to rest before the coding day tomorrow.
+
+I've seen the model on paper, and now I'm seeing it in action. It's everything I hoped for.
+
+More tomorrow!
+
+<hr />
+### Rails Girls installation resources:
+ <a href="http://guides.railsgirls.com/install/">Rails Girls' Guide to Installation Rails</a>
+
