--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -33,7 +33,7 @@ It was finally decided I should go back "home" and get my iMac. I had just walke
 
 I started crying. I started walking. 
 
-I walked 20 minutes home, then dragged my 31.2 lb. iMac across downtown Ottawa from UOttawa campus. It's a walk that, given highway off-ramps and the lay of the streets, forces you directly into crossing a halfway house, youth hostel and full-on homeless shelter, into an extraordinarily sketchy parking lot. It was still littered with all the bottles and syringes from a Canada Day DJ party.I managed to get my $1200 most prized possession from home into the safety of where we were working from.
+I walked 20 minutes home, then dragged my 31.2 lb. iMac across downtown Ottawa from UOttawa campus. It's a walk that, given highway off-ramps and the lay of the streets, forces you directly into crossing a halfway house, youth hostel and full-on homeless shelter, into an extraordinarily sketchy parking lot. It was still littered with all the bottles and syringes from a Canada Day DJ party. I managed to get my $1200 most prized possession from home into the safety of where we were working from.
 
 From then on, installation was a breeze. One of our awesome instructors had designed a VM just for us, which had all the things we needed in it. My iMac powered through the installation no problem.
 
@@ -41,13 +41,16 @@ Still, this is how I lost my Rails virginity.
 
 It wasn't pleasant. I wouldn't wish it on anyone.
 
+*<i>Disclaimer: I love my instructors (professionally) very much. They're my go-to people, my mentors. They've gotten me through some tough spots and stayed up til way past closing time to make sure I got past the finish line. No matter what I ask or when, they have an answer. I owe them my entire existence as a dev. Thank you. 
+
+The Coordinator, however, is another story.</i>
 <hr />
 
 This is why I am such a firm believer in the Rails Girls model.
 
 I'll post with more about the model tomorrow, [here], but the basic premise is: programming is fun. Learning to program should be free. Everyone can program.
 
-The Rails Girls D.C. Installation Party in D.C. was wonderful. We were welcomed into a bright blue door, into the beautiful, tiered open concept Living Social office, down stairs into a warm and comfy exposed brick living room, then down the hall into the main meeting room.
+The Rails Girls D.C. Installation Party was wonderful. We were welcomed through a bright blue door, into the beautiful, tiered open concept Living Social office, down stairs into a warm and comfy exposed brick living room, then down the hall into the main meeting room.
 
 <blockquote> Programming is fun. Learning to program should be free. Everyone can program.</blockquote>
 
