--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -43,7 +43,7 @@ It wasn't pleasant. I wouldn't wish it on anyone.
 
 *<i>Disclaimer: I love my instructors (professionally) very much. They're my go-to people, my mentors. They've gotten me through some tough spots and stayed up til way past closing time to make sure I got past the finish line. No matter what I ask or when, they have an answer. I owe them my entire existence as a dev. Thank you. 
 
-The Coordinator, however, is another story.</i>
+<i>The Coordinator, however, is another story.</i>
 <hr />
 
 This is why I am such a firm believer in the Rails Girls model.
