--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -10,12 +10,17 @@ comments: true
   feature: texture-feature-05.jpg
   credit: Texture Lovers
   creditlink: http://texturelovers.com -->
+submenu:
+  - { hook: "travel",       title: "Travel" }
+  - { hook: "myinstallation", title: "My Installation (you can totally skip this and keep living an excellent life)" }
+  - { hook: "rginstallation", title: "The Rails Girls Way" }
+  - { hook: "resources", title: "Rails Installation Resources" }
 ---
 
 # Leaving on a jet plane
 
 ### Landed at Living Social for the Rails Girls D.C. installation party!
-
+<a name="travel">&nbsp;</a>
 It's easy to forget your place of birth is a privilege. 
 
 It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked through customs, in fact through U.S. citizens' processing, with my Canadian birth and citizenship. No one else on my plane was redirected. 
@@ -23,7 +28,7 @@ It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked t
 Today I have been redirected by a NASA scientist, a roving governor, FedEx and a skateboarder. All in a day, right?
 
 <hr />
-I remember my Rails installation.
+I remember my Rails installation.<a name="myinstallation">&nbsp;</a>
 
 The day was hot and sticky. Although I'd been told rules had changed since we were interviewed and we couldn't keep equipment on-site, I was told the Coordinator of the program had a laptop for me and it would be no problem to use.
 
@@ -47,7 +52,7 @@ It wasn't pleasant. I wouldn't wish it on anyone.
 <i>The Coordinator, however, is another story.</i>
 <hr />
 
-This is why I am such a firm believer in the Rails Girls model.
+This is why I am such a firm believer in the Rails Girls model. <a name="rginstallation">&nbsp;</a>
 
 I'll post with more about the model tomorrow, [here], but the basic premise is: programming is fun. Learning to program should be free. Everyone can program.
 
@@ -68,6 +73,6 @@ I've seen the model on paper, and now I'm seeing it in action. It's everything I
 More tomorrow!
 
 <hr />
-### Rails Girls installation resources:
+### Rails Girls installation resources: <a name="resources">&nbsp;</a>
  <a href="http://guides.railsgirls.com/install/">Rails Girls' Guide to Installation Rails</a>
 
