Let's try something else

--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -10,17 +10,12 @@ comments: true
   feature: texture-feature-05.jpg
   credit: Texture Lovers
   creditlink: http://texturelovers.com -->
-submenu:
-  - { hook: "travel", title: "Travel" }
-  - { hook: "myinstallation", title: "My Installation (you can totally skip this and keep living an excellent life)" }
-  - { hook: "rginstallation", title: "The Rails Girls Way" }
-  - { hook: "resources", title: "Rails Installation Resources" }
 ---
-
+[link to heading 1](@wiki-heading1)
 # Leaving on a jet plane
 
 ### Landed at Living Social for the Rails Girls D.C. installation party!
-<a name="travel">Hi</a>
+# <a name="travel"/> Heading 1
 It's easy to forget your place of birth is a privilege. 
 
 It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked through customs, in fact through U.S. citizens' processing, with my Canadian birth and citizenship. No one else on my plane was redirected. 
