change link content

--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -11,7 +11,7 @@ comments: true
   credit: Texture Lovers
   creditlink: http://texturelovers.com -->
 ---
-[link to heading 1](@page-heading1)
+[link to heading 1](@name-travel)
 # Leaving on a jet plane
 
 ### Landed at Living Social for the Rails Girls D.C. installation party!
