--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -15,7 +15,7 @@ comments: true
 # Leaving on a jet plane
 
 ### Landed at Living Social for the Rails Girls D.C. installation party!
-# <a name="travel"/> Heading 1
+# <a name="travel"> Heading 1</a>
 It's easy to forget your place of birth is a privilege. 
 
 It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked through customs, in fact through U.S. citizens' processing, with my Canadian birth and citizenship. No one else on my plane was redirected. 
