--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -11,11 +11,10 @@ comments: true
   credit: Texture Lovers
   creditlink: http://texturelovers.com -->
 ---
-[link to heading 1](@travel)
 # Leaving on a jet plane
 
 ### Landed at Living Social for the Rails Girls D.C. installation party!
-# <a name="travel"> Heading 1</a>
+
 It's easy to forget your place of birth is a privilege. 
 
 It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked through customs, in fact through U.S. citizens' processing, with my Canadian birth and citizenship. No one else on my plane was redirected. 
@@ -23,7 +22,7 @@ It took me 4.5 hours to get off the plane and downtown, but I was fast-tracked t
 Today I have been redirected by a NASA scientist, a roving governor, FedEx and a skateboarder. All in a day, right?
 
 <hr />
-I remember my Rails installation.<a name="myinstallation">yo</a>
+I remember my Rails installation.
 
 The day was hot and sticky. Although I'd been told rules had changed since we were interviewed and we couldn't keep equipment on-site, I was told the Coordinator of the program had a laptop for me and it would be no problem to use.
 
@@ -47,7 +46,7 @@ It wasn't pleasant. I wouldn't wish it on anyone.
 <i>The Coordinator, however, is another story.</i>
 <hr />
 
-This is why I am such a firm believer in the Rails Girls model. <a name="rginstallation">Sup</a>
+This is why I am such a firm believer in the Rails Girls model. 
 
 I'll post with more about the model tomorrow, [here], but the basic premise is: programming is fun. Learning to program should be free. Everyone can program.
 
