rails installation cut

--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -24,26 +24,11 @@ Today I have been redirected by a NASA scientist, a roving governor, FedEx and a
 <hr />
 I remember my Rails installation.
 
-The day was hot and sticky. Although I'd been told rules had changed since we were interviewed and we couldn't keep equipment on-site, I was told the Coordinator of the program had a laptop for me and it would be no problem to use.
+TL;DR version sounds like: crash crash overheat crash walking walking walking heat sticky hot walking crying homeless people scary parking lot why? 
 
-We tried to boot the computer up. It crashed. We tried to boot the computer up again. It crashed again. We tried to boot the computer up again. We got Ubuntu running, then it overheated, crashed, and wouldn't turn on again. Everyone else seemed to be doing something. The Coordinator said, "Oh well. Do you have another computer?" A tight little knot balled up inside me.
+*Disclaimer: I love my instructors (professionally) very much. They're my go-to people, my mentors. They've gotten me through some tough spots and stayed up til way past closing time to make sure I got past the finish line. No matter what I ask or when, they have an answer. I owe them my entire existence as a dev. My instructors are brilliant, awesome, generous, effective people. Thank you.* 
 
-It was finally decided I should go back "home" and get my iMac. I had just walked 20 minutes across Ottawa, but the Coordinator snidely remarked, "Well, you would've had to bring it anyway, right?"
-
-I started crying. I started walking. 
-
-I walked 20 minutes home, then dragged my 31.2 lb. iMac across downtown Ottawa from UOttawa campus. It's a walk that, given highway off-ramps and the lay of the streets, forces you directly into crossing a halfway house, youth hostel and full-on homeless shelter, into an extraordinarily sketchy parking lot. It was still littered with all the bottles and syringes from a Canada Day DJ party. I managed to get my $1200 most prized possession from home into the safety of where we were working from.
-
-From then on, installation was a breeze. One of our awesome instructors had designed a VM just for us, which had all the things we needed in it. My iMac powered through the installation no problem.
-
-Still, this is how I lost my Rails virginity.
-
-It wasn't pleasant. I wouldn't wish it on anyone.
-<br />
-<br />
-*<i>Disclaimer: I love my instructors (professionally) very much. They're my go-to people, my mentors. They've gotten me through some tough spots and stayed up til way past closing time to make sure I got past the finish line. No matter what I ask or when, they have an answer. I owe them my entire existence as a dev. Thank you. 
-
-<i>The Coordinator, however, is another story.</i>
+The thing to say here is: no one had enough support or resources. My first time wasn't very pleasant.
 <hr />
 
 This is why I am such a firm believer in the Rails Girls model. 
