remove final anchor piece

--- a/_posts/2014-06-04-travel.md
+++ b/_posts/2014-06-04-travel.md
@@ -52,6 +52,6 @@ I've seen the model on paper, and now I'm seeing it in action. It's everything I
 More tomorrow!
 
 <hr />
-### Rails Girls installation resources: <a name="resources">Dawg</a>
+### Rails Girls installation resources:
  <a href="http://guides.railsgirls.com/install/">Rails Girls' Guide to Installation Rails</a>
 
