--- a/404.md
+++ b/404.md
@@ -2,10 +2,10 @@
 layout: page
 title: "Page Not Found"
 description: "Page not found. Your pixels are in another canvas."
-image:
+<!-- image:
   feature: texture-feature-01.jpg
   credit: Texture Lovers
-  creditlink: http://texturelovers.com
+  creditlink: http://texturelovers.com -->
 ---  
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
